# forest

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  state_machine.md  telegram_state_machine.md
Container/: CMakeLists.txt
Container/include/forest/: container.hpp
Container/include/forest/container/: literal_pair.hpp  literal_string.hpp  literal_tree.hpp  literal_vector.hpp  map.hpp  semiregular_box.hpp  tree.hpp  vector.hpp
Container/tests/: CMakeLists.txt  test_string.cpp  test_trivial.cpp
Machine/: CMakeLists.txt
Machine/include/forest/: machine.hpp
Machine/include/forest/machine/backend/: context.hpp  core.hpp  machine.hpp  state.hpp  transit.hpp
Machine/include/forest/machine/frontend/: binding.hpp  parsing.hpp  tree.hpp
Machine/tests/: CMakeLists.txt  test_enter_exit.cpp  test_reenter.cpp  test_region.cpp  test_trivial.cpp
Meta/: CMakeLists.txt
Meta/include/forest/: meta.hpp
Meta/include/forest/meta/: constant.hpp  dependent.hpp  for_each.hpp  functional.hpp  hedley.hpp  overloaded.hpp  same_unqual.hpp  tuple_like.hpp  type_name.hpp
Meta/tests/: CMakeLists.txt  test_trivial.cpp
SM/: CMakeLists.txt
SM/include/forest/: sm2.hpp
SM/include/forest/internal/back_end/: back_end.hpp  base.hpp  context.hpp  machine.hpp  state.hpp  transit.hpp
SM/include/forest/internal/container/: literal_map.hpp  literal_string.hpp  literal_tree.hpp  map.hpp  semiregular_box.hpp  tree.hpp  vector.hpp
SM/include/forest/internal/front_end/: parsing.hpp  state_tree.hpp
SM/include/forest/internal/meta/: dependent.hpp  for_each.hpp  value_constant.hpp
SM/include/forest/sm/: button.hpp  command.hpp  context.hpp  inline_query.hpp  keyboard.hpp  message.hpp  sm.hpp
SM/test/: 00-trivial.cpp  01-demo.cpp  01-transition_table.cpp  02-sm.cpp  02-timeouts.cpp  CMakeLists.txt
Signal/: CMakeLists.txt
Signal/include/forest/: signal.hpp
Signal/include/forest/signal/: and_then.hpp  concepts.hpp  core.hpp  either.hpp  just.hpp  maybe.hpp  nothing.hpp  optional.hpp  or_else.hpp  overload.hpp
Signal/tests/: CMakeLists.txt
TSM/: CMakeLists.txt
TSM/include/forest/tsm/: tsm.hpp
TSM/test/: 00-trivial.cpp  CMakeLists.txt
Telegram/: CMakeLists.txt
Telegram/include/forest/: telegram.hpp
Telegram/include/forest/telegram/: bot.hpp  context.hpp  driver.hpp  event.hpp  pagination.hpp  projections.hpp  state.hpp  storage.hpp  tcp_webserver.hpp
Telegram/include/forest/telegram/utility/: base64.hpp
Telegram/tests/: CMakeLists.txt  driver.cpp  test_demo1.cpp  test_demo2.cpp  test_encoding.hpp  test_serialization.hpp  test_trivial.hpp
cmake/: CPM.cmake  dependencies.cmake
include/forest/: context_handler.hpp  forest.hpp  persistence.hpp  transition_table.hpp
include/forest/concepts/: context.hpp  event.hpp  state.hpp  transition.hpp
include/forest/events/: button_pressed.hpp  message.hpp
include/forest/transitions/: button.hpp  command.hpp  message.hpp
test/: 00-dialogue.cpp  01-json_compiles.cpp  02-curl_compiles.cpp  03-sqlitecpp_compiles.cpp  04-persistence.cpp  05-dice.cpp  CMakeLists.txt
