function(add_testcase test_name)
  add_executable(${test_name} ${test_name}.cpp)
  target_link_libraries(${test_name} PRIVATE forest)
endfunction()

add_testcase(00-dialogue)
add_testcase(01-json_compiles)
add_testcase(02-curl_compiles)
add_testcase(03-sqlitecpp_compiles)
add_testcase(04-persistence)
